# zebra

./: Cargo.toml  Procfile  notes.txt  zebra.toml
.caution/: deployment.json
.github/workflows/: cd-deploy-nodes-gcp.yml  ci-build-crates.patch.yml  ci-build-crates.yml  ci-coverage.yml  ci-lint.yml  ci-unit-tests-os.yml  docs-deploy-firebase.yml  sub-build-docker-image.yml  sub-deploy-integration-tests-gcp.yml
docker/: Dockerfile  Dockerfile.deterministic  build.sh  default-zebra-config.toml
enclave/: Cargo.toml  init.sh  udhcpc-script.sh
enclave/attestation-service/: Cargo.toml
enclave/attestation-service/src/: main.rs
enclave/src/aws/src/: lib.rs
enclave/src/init/: init.rs
enclave/src/system/src/: lib.rs
zebrad/: Cargo.toml
zebrad/src/commands/: start.rs
zebrad/src/components/: health.rs
